# testClay-codespaces

./: .gitignore  CMakeLists.txt  README.md  clay_renderer_SDL2.c  guidnbatter.db  instruction.md
.devcontainer/: devcontainer.json
SDL2-video-demo/: main.c
SDL3/: clay_renderer_SDL3.c
python/: convert.py  monsters.csv  monsters.json
shared-layouts/: clay-video-demo.c
src/: build_encounter.c  build_encounter.h  db_query.c  db_query.h  global.c  global.h  main.c  main_window.c  main_window.h  styles.c  styles.h  text_input.c  text_input.h
